--- a/index.html
+++ b/index.html
@@ -9,63 +9,55 @@
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body>
-    <header class="header content-section">
+  <body class="body">
+    <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a class="header__link header__link_active text-link" href="#0">главная</a>
+            <a href="#0" class="header__link header__link_active">главная</a>
           </li>
-          <li class="header__links-list-item text-link">
-            <a class="header__link" href="#0">посмотреть лоты</a>
+          <li class="header__links-list-item">
+            <a href="#0" class="header__link">посмотреть лоты</a>
           </li>
-          <li class="header__links-list-item text-link">
-            <a class="header__link" href="#0">об аукционе</a>
+          <li class="header__links-list-item">
+            <a href="#0" class="header__link">об аукционе</a>
           </li>
         </ul>
       </nav>
-      <a class="header__logo" href="#0">
-        <img
-          class="header__logo-image"
-          src="images/logo-black.svg"
-          alt="Логотип проекта"
-        />
+      <a class="header__logo">
+        <img class="header__logo-image" src="images/logo-black.svg" alt="" />
       </a>
-      <address class="header__address">
-        <a class="address__item text-link" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="address__item text-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p class="address__address-text">
-          наб. Принсенграхт 263-265,<br />Амстердам
-        </p>
-      </address>
+      <div class="header__address">
+        <address class="address">
+          <a href="tel:+99995555555" class="phone-address">+9 999 555 5555</a>
+          <a href="mailto:info@sobaka.ge" class="mail-address"
+            >info@sobaka.ge</a
+          >
+          <p class="city-address-first">наб. Принсенграхт 263-<br>265, Амстердам</p>
+        </address>
+      </div>
     </header>
-
     <main>
-      <section class="cover content-section">
-        <div class="overlay"></div>
-        <h1 class="cover__title">
-          <span class="aligned-text"
-            >о<span class="letter-spacing-extended">но</span></span
-          >
-          <span class="aligned-text aligned-text_center"
-            >те<span class="letter-spacing-extended">бе</span></span
-          >
-          <span class="aligned-text aligned-text_right"
-            ><span class="letter-spacing-extended">н</span>ад<span class="remove-spacing">о</span></span
-          >
-        </h1>
-        <div class="cover__description">
-          <p class="cover__description-text">
-            Аукцион вещей, в которые никто не верил
-          </p>
-          <button class="bet-button">Сделать ставку</button>
+      <section class="cover">
+        <div class="overlay">
+          <h1 class="cover__title">
+            <span class="aligned-text">ОНО</span>
+            <span class="aligned-text_center">ТЕБЕ</span>
+            <span class="aligned-text_right">НАДО</span>
+          </h1>
+          <div class="cover__description">
+            <p class="cover__description-text">
+              аукцион вещей, в которые никто не верил
+            </p>
+            <button class="bet-button">сделать ставку</button>
+          </div>
         </div>
       </section>
-      <section class="lots content-section">
+      <section class="lots">
         <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
-          <li class="lost__card-list-item">
-            <a class="card-link" href="#0">
+          <li class="lots__card-list-item">
+            <a href="#0" class="card-link">
               <article class="card card_type_film">
                 <div class="overlay"></div>
                 <h3 class="card__title">
@@ -79,8 +71,8 @@
               </article>
             </a>
           </li>
-          <li class="lost__card-list-item">
-            <a class="card-link" href="#0">
+          <li class="lots__card-list-item">
+            <a href="#" class="card-link">
               <article class="card card_type_book">
                 <div class="overlay"></div>
                 <h3 class="card__title">
@@ -97,8 +89,8 @@
               </article>
             </a>
           </li>
-          <li class="lost__card-list-item">
-            <a class="card-link" href="#0">
+          <li class="lots__card-list-item">
+            <a href="#" class="card-link">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
                 <h3 class="card__title">
@@ -114,88 +106,89 @@
             </a>
           </li>
         </ul>
-        <a class="lots__look-more-link text-link" href="#0">посмотреть больше</a>
+        <div class="lots__look-more-link">
+          <a class="lots__look-more-link-text" href="#0">посмотреть больше</a>
+        </div>
       </section>
-      <section class="about content-section">
+      <section class="about">
         <div class="about__column">
           <div class="about__logo">
             <img
               class="about__logo-image"
               src="images/logo-white.svg"
-              alt="Логотип проекта"
+              alt="белый логотип сайта как в шапке"
             />
           </div>
-        </div>
-        <div class="about__column about__column_text">
-          <h2 class="about__title">Об аукционе</h2>
-          <div class="about__text">
-            <p>
-              Здесь вы не встретите очередное пафосное собрание невероятно
-              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
-              на один аукцион. Потому что кому нужен дневник девочки-подростка
-              или картина, которую может нарисовать даже ребёнок? Кому нужны все
-              эти странные вещи, созданные любителями?
-            </p>
-            <p>
-              Слишком сложные или, наоборот, слишком простые. Опережающие своё
-              время. В пух и прах растерзанные критиками. Непринятые и
-              непонятые. Когда-то они казались просто неудачными. Но, несмотря
-              на критику, кажущуюся простоту или сложность, сейчас без этих
-              лотов невозможно представить современную культуру. Когда в эти
-              вещи не верил никто, продолжали верить их создатели. И сейчас эти
-              лоты стали культовыми.
-            </p>
+          <div class="about__title-and-text-wrapper">
+            <h2 class="about__title">Об аукционе</h2>
+            <div class="about__text">
+              <p>
+                Здесь вы не встретите очередное пафосное собрание невероятно
+                дорогого антиквариата. Наши лоты вообще не должны были попасть
+                ни на один аукцион. Потому что кому нужен дневник
+                девочки-подростка или картина, которую может нарисовать даже
+                ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+              </p>
+              <p>
+                Слишком сложные или, наоборот, слишком простые. Опережающие своё
+                время. В пух и прах растерзанные критиками. Непринятые и
+                непонятые. Когда-то они казались просто неудачными. Но, несмотря
+                на критику, кажущуюся простоту или сложность, сейчас без этих
+                лотов невозможно представить современную культуру. Когда в эти
+                вещи не верил никто, продолжали верить их создатели. И сейчас
+                эти лоты стали культовыми.
+              </p>
+            </div>
           </div>
         </div>
       </section>
     </main>
-
-    <footer class="footer content-section">
+    <footer class="footer">
       <address class="address">
-        <a class="address__item text-link" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="address__item text-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p class="address__address-text">
-          наб. Принсенграхт 263-265,<br />Амстердам
-        </p>
+        <a href="tel:+99995555555" class="phone-address">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge" class="mail-address">info@sobaka.ge</a>
+        <p class="city-address-first">наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link footer__menu-link_active text-link" href="#0">главная</a>
+            <a class="footer__menu-link footer__menu-link_active" href="#0"
+              >главная</a
+            >
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link text-link" href="#0">посмотреть лоты</a>
+            <a class="footer__menu-link" href="#0">посмотреть лоты</a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link text-link" href="#0">об аукционе</a>
+            <a class="footer__menu-link" href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a href="" class="footer__social-link">
+          <a target="_blank" class="footer__social-link" href="">
             <img
               class="footer__social-icon"
               src="images/yt.svg"
-              alt="Логотип Youtube"
+              alt="ссылка на сайт youTube"
             />
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a href="" class="footer__social-link">
+          <a target="_blank" class="footer__social-link" href="">
             <img
               class="footer__social-icon"
               src="images/vk.svg"
-              alt="Логотип Вконтакте"
+              alt="ссылка на социальную сеть вконтакте"
             />
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a href="" class="footer__social-link">
+          <a target="_blank" class="footer__social-link" href="">
             <img
               class="footer__social-icon"
               src="images/pinterest.svg"
-              alt="Логотип Pinterest"
+              alt="ссылка на сайт pinterest"
             />
           </a>
         </li>
